--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev" : "nodemon index.js"
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +13,8 @@
   "dependencies": {
     "dotenv": "^17.0.0",
     "express": "^5.1.0",
+    "express-fileupload": "^1.5.1",
+    "mongoose": "^8.16.1",
     "nodemon": "^3.1.10"
   }
 }
