--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cloudinary": "^2.7.0",
     "dotenv": "^17.0.0",
     "express": "^5.1.0",
     "express-fileupload": "^1.5.1",
