--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^5.1.0",
     "express-fileupload": "^1.5.1",
     "mongoose": "^8.16.1",
+    "nodemailer": "^7.0.4",
     "nodemon": "^3.1.10"
   }
 }
